# gpu-info

./: CMakeLists.txt  main.cpp
